[package]
name = "punch"
version = "0.1.0"
authors = ["Martin Junghanns <nerdfaktor42@mailbox.org>"]
edition = "2018"
description = "A simple time clock tool."

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
directories = "3.0.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
tabular = "0.1.4"

[dev-dependencies]
assert_cmd = "1.0.1"
