[package]
name = "punch"
version = "0.1.0"
authors = ["Martin Junghanns <nerdfaktor42@mailbox.org>"]
edition = "2018"
description = "A simple time clock tool."
license = "MIT OR Apache-2.0"
repository = "https://github.com/s1ck/punch"
default-run = "punch"

[dependencies]
clap = "2.33.3"
chrono = "0.4.19"
comfy-table = "1.3.0"
dialoguer = "0.7.1"
directories = "3.0.1"
nanoserde = "0.1.20"

[dev-dependencies]
assert_cmd = "1.0.1"

[[bin]]
name = "punch"
path = "src/main.rs"
